[package]
name = "advent-of-code-2024"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2021"
publish = false

# Always optimize builds (we care about speed, not safety)
[profile.dev]
opt-level = 3

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
dedent = "0.1.1"
